--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -22,5 +22,5 @@
 }
 
 .editor {
-	grid-column: span 4;
+	grid-column: span 3;
 }
