--- a/app/assets/stylesheets/_splash.scss
+++ b/app/assets/stylesheets/_splash.scss
@@ -16,6 +16,7 @@
 
 	.full-bleed & {
 		height: 30vh;
+		min-height: 14em;
 	}
 }
 
