--- a/app/assets/stylesheets/_typography.scss
+++ b/app/assets/stylesheets/_typography.scss
@@ -36,3 +36,9 @@ ul, ol {
 		margin-top: 0;
 	}
 }
+
+.ce-block i {
+	&.fa, &.ra {
+		font-style: normal;
+	}
+}
